package edu.advising.states;

public interface State {
}
